--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link rel="stylesheet" type="text/css" href="index.css" />
       </head>
 <body>
-
+<div class="container">
 <h1 class="red">This is heading 1</h1>
 <h2 class="blue">hola</h2>
-<p>
-    hello world
-</p>
+<p>hello world</p>
+</div>
+
 
 
 </body>
