--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <h1 class="red">This is heading 1</h1>
 <h2 class="blue">hola</h2>
 <p>hello world</p>
-</div><br>
-<img src="html-5.png" width="200" height="200">
+</div>
 
 
 
